--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   upi_india: ^3.0.1
+  flutter_enhanced_barcode_scanner: ^3.0.2
 
 dev_dependencies:
   flutter_test:
